GRUD for faculties and specialities

--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en" ng-app="app">
+<html ng-app="app">
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
-    <title data-ng-bind="title"></title>
+    <title>D-Tester</title>
 
     <!-- build:css styles/lib.css -->
     <!-- bower:css -->
@@ -41,37 +41,38 @@
 <script src="app/app.module.js"></script>
 <script src="app/admin/admin.module.js"></script>
 <script src="app/core/core.module.js"></script>
-<script src="app/admin/groups/groups.module.js"></script>
-<script src="app/admin/subjects/subjects.module.js"></script>
+<!--<script src="app/admin/groups/groups.module.js"></script>-->
+<!--<script src="app/admin/subjects/subjects.module.js"></script>-->
 <script src="app/app.config.js"></script>
 <script src="app/app.constants.js"></script>
 <script src="app/admin/admin.service.js"></script>
 <script src="app/admin/home-admin.controller.js"></script>
-<script src="app/components/image-load.directive.js"></script>
+<!--<script src="app/components/image-load.directive.js"></script>-->
 <script src="app/core/core.entities.service.js"></script>
-<script src="app/admin/admins/admins.controller.js"></script>
-<script src="app/admin/admins/admins.service.js"></script>
+<!--<script src="app/admin/admins/admins.controller.js"></script>-->
+<!--<script src="app/admin/admins/admins.service.js"></script>-->
 <script src="app/admin/faculties/faculties.controller.js"></script>
+<script src="app/admin/save-form-entity.controller.js"></script>
 <script src="app/admin/faculties/faculties.service.js"></script>
-<script src="app/admin/groups/groups.controller.js"></script>
-<script src="app/admin/groups/groups.service.js"></script>
+<!--<script src="app/admin/groups/groups.controller.js"></script>-->
+<!--<script src="app/admin/groups/groups.service.js"></script>-->
 <script src="app/admin/specialities/specialities.controller.js"></script>
 <script src="app/admin/specialities/specialities.service.js"></script>
-<script src="app/admin/subjects/subjects.controller.js"></script>
-<script src="app/admin/subjects/subjects.service.js"></script>
+<!--<script src="app/admin/subjects/subjects.controller.js"></script>-->
+<!--<script src="app/admin/subjects/subjects.service.js"></script>-->
 <script src="app/components/header/header.controller.js"></script>
 <script src="app/components/header/header.directive.js"></script>
-<script src="app/admin/groups/students/students.controller.js"></script>
-<script src="app/admin/groups/students/students.service.js"></script>
-<script src="app/admin/subjects/schedules/schedules.controller.js"></script>
-<script src="app/admin/subjects/schedules/schedules.service.js"></script>
-<script src="app/admin/subjects/tests/tests.controller.js"></script>
-<script src="app/admin/subjects/tests/tests.service.js"></script>
-<script src="app/admin/subjects/tests/questions/questions.controller.js"></script>
-<script src="app/admin/subjects/tests/questions/questions.service.js"></script>
-<script src="app/admin/subjects/tests/test-details/test-details.controller.js"></script>
-<script src="app/admin/subjects/tests/questions/answer/answer.controller.js"></script>
-<script src="app/admin/subjects/tests/questions/answer/answers.service.js"></script>
+<!--<script src="app/admin/groups/students/students.controller.js"></script>-->
+<!--<script src="app/admin/groups/students/students.service.js"></script>-->
+<!--<script src="app/admin/subjects/schedules/schedules.controller.js"></script>-->
+<!--<script src="app/admin/subjects/schedules/schedules.service.js"></script>-->
+<!--<script src="app/admin/subjects/tests/tests.controller.js"></script>-->
+<!--<script src="app/admin/subjects/tests/tests.service.js"></script>-->
+<!--<script src="app/admin/subjects/tests/questions/questions.controller.js"></script>-->
+<!--<script src="app/admin/subjects/tests/questions/questions.service.js"></script>-->
+<!--<script src="app/admin/subjects/tests/test-details/test-details.controller.js"></script>-->
+<!--<script src="app/admin/subjects/tests/questions/answer/answer.controller.js"></script>-->
+<!--<script src="app/admin/subjects/tests/questions/answer/answers.service.js"></script>-->
 <!-- endinject -->
 
 <!-- inject:templates:js -->
