GRUD for groups

--- a/src/index.html
+++ b/src/index.html
@@ -41,7 +41,7 @@
 <script src="app/app.module.js"></script>
 <script src="app/admin/admin.module.js"></script>
 <script src="app/core/core.module.js"></script>
-<!--<script src="app/admin/groups/groups.module.js"></script>-->
+<script src="app/admin/groups/groups.module.js"></script>
 <!--<script src="app/admin/subjects/subjects.module.js"></script>-->
 <script src="app/app.config.js"></script>
 <script src="app/app.constants.js"></script>
@@ -54,8 +54,8 @@
 <script src="app/admin/faculties/faculties.controller.js"></script>
 <script src="app/admin/save-form-entity.controller.js"></script>
 <script src="app/admin/faculties/faculties.service.js"></script>
-<!--<script src="app/admin/groups/groups.controller.js"></script>-->
-<!--<script src="app/admin/groups/groups.service.js"></script>-->
+<script src="app/admin/groups/groups.controller.js"></script>
+<script src="app/admin/groups/groups.service.js"></script>
 <script src="app/admin/specialities/specialities.controller.js"></script>
 <script src="app/admin/specialities/specialities.service.js"></script>
 <!--<script src="app/admin/subjects/subjects.controller.js"></script>-->
