--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="../bower_components/angular-material/angular-material.css" />
     <!-- endbower -->
     <!-- endbuild -->
-    <link rel="stylesheet" href="../bower_components/font-awesome/css/font-awesome.css" />
+    <!--<link rel="stylesheet" href="../bower_components/font-awesome/css/font-awesome.css" />-->
     <link rel="stylesheet" href="styles/styles.css">
     <!-- build:css styles/app.css-->
     <!-- inject:css -->
