--- a/src/index.html
+++ b/src/index.html
@@ -61,7 +61,7 @@
 <!--<script src="app/admin/subjects/subjects.controller.js"></script>-->
 <!--<script src="app/admin/subjects/subjects.service.js"></script>-->
 <script src="app/components/header/header.controller.js"></script>
-<script src="app/components/header/header.directive.js"></script>
+<script src="app/components/header/header.component.js"></script>
 <!--<script src="app/admin/groups/students/students.controller.js"></script>-->
 <!--<script src="app/admin/groups/students/students.service.js"></script>-->
 <!--<script src="app/admin/subjects/schedules/schedules.controller.js"></script>-->
