refactor, added filter, modal window and confirmation, pagination

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="../bower_components/angular-material/angular-material.css" />
     <!-- endbower -->
     <!-- endbuild -->
-    <!--<link rel="stylesheet" href="../bower_components/font-awesome/css/font-awesome.css" />-->
+
     <link rel="stylesheet" href="styles/styles.css">
     <!-- build:css styles/app.css-->
     <!-- inject:css -->
@@ -41,18 +41,15 @@
 <script src="app/app.module.js"></script>
 <script src="app/admin/admin.module.js"></script>
 <script src="app/core/core.module.js"></script>
-<script src="app/admin/groups/groups.module.js"></script>
-<!--<script src="app/admin/subjects/subjects.module.js"></script>-->
 <script src="app/app.config.js"></script>
 <script src="app/app.constants.js"></script>
+<script src="app/core/core-search.filter.js"></script>
+<script src="app/core/core-entities-http-requests.service.js"></script>
+<script src="app/core/core-save-form-entity.controller.js"></script>
+<!--<script src="app/components/image-load.directive.js"></script>-->
 <script src="app/admin/admin.service.js"></script>
 <script src="app/admin/home-admin.controller.js"></script>
-<!--<script src="app/components/image-load.directive.js"></script>-->
-<script src="app/core/core.entities.service.js"></script>
-<!--<script src="app/admin/admins/admins.controller.js"></script>-->
-<!--<script src="app/admin/admins/admins.service.js"></script>-->
 <script src="app/admin/faculties/faculties.controller.js"></script>
-<script src="app/core/core-save-form-entity.controller.js"></script>
 <script src="app/admin/faculties/faculties.service.js"></script>
 <script src="app/admin/groups/groups.controller.js"></script>
 <script src="app/admin/groups/groups.service.js"></script>
