refactor for 3 entity for components

--- a/src/index.html
+++ b/src/index.html
@@ -47,6 +47,9 @@
 <script src="app/core/core-entities-http-requests.service.js"></script>
 <script src="app/core/core-save-form-entity.controller.js"></script>
 <!--<script src="app/components/image-load.directive.js"></script>-->
+<script src="app/admin/faculties/faculties.component.js"></script>
+<script src="app/admin/specialities/specialities.component.js"></script>
+<script src="app/admin/groups/groups.component.js"></script>
 <script src="app/admin/admin.service.js"></script>
 <script src="app/admin/home-admin.controller.js"></script>
 <script src="app/admin/faculties/faculties.controller.js"></script>
