added ng-cloak and fixed mdToast

--- a/src/index.html
+++ b/src/index.html
@@ -18,11 +18,12 @@
     <!-- endinject -->
     <!-- endbuild -->
 </head>
-<body class="ng-cloak">
+<body layout="column">
 
-<div layout="column">
+<md-content>
     <div ui-view></div>
-</div>
+</md-content>
+
 
 </body>
 <!-- build:js js/lib.js -->
