--- a/src/index.html
+++ b/src/index.html
@@ -51,6 +51,7 @@
 <script src="app/admin/faculties/faculties.component.js"></script>
 <script src="app/admin/specialities/specialities.component.js"></script>
 <script src="app/admin/groups/groups.component.js"></script>
+<script src="app/admin/subjects/subjects.component.js"></script>
 <script src="app/admin/admin.service.js"></script>
 <script src="app/admin/home-admin.controller.js"></script>
 <script src="app/admin/faculties/faculties.controller.js"></script>
@@ -59,8 +60,8 @@
 <script src="app/admin/groups/groups.service.js"></script>
 <script src="app/admin/specialities/specialities.controller.js"></script>
 <script src="app/admin/specialities/specialities.service.js"></script>
-<!--<script src="app/admin/subjects/subjects.controller.js"></script>-->
-<!--<script src="app/admin/subjects/subjects.service.js"></script>-->
+<script src="app/admin/subjects/subjects.controller.js"></script>
+<script src="app/admin/subjects/subjects.service.js"></script>
 <script src="app/components/header/header.controller.js"></script>
 <script src="app/components/header/header.component.js"></script>
 <!--<script src="app/admin/groups/students/students.controller.js"></script>-->
