--- a/src/index.html
+++ b/src/index.html
@@ -18,12 +18,11 @@
     <!-- endinject -->
     <!-- endbuild -->
 </head>
-<body layout="column">
+<body>
 
 <md-content>
     <div ui-view></div>
 </md-content>
-
 
 </body>
 <!-- build:js js/lib.js -->
@@ -46,6 +45,7 @@
 <script src="app/app.constants.js"></script>
 <script src="app/core/core-search.filter.js"></script>
 <script src="app/core/core-entities-http-requests.service.js"></script>
+<script src="app/core/core-helper.service.js"></script>
 <script src="app/core/core-save-form-entity.controller.js"></script>
 <!--<script src="app/components/image-load.directive.js"></script>-->
 <script src="app/admin/faculties/faculties.component.js"></script>
