--- a/src/index.html
+++ b/src/index.html
@@ -12,9 +12,9 @@
     <!-- endbower -->
     <!-- endbuild -->
 
-    <link rel="stylesheet" href="styles/styles.css">
     <!-- build:css styles/app.css-->
     <!-- inject:css -->
+    <link rel="stylesheet" href="../.tmp/styles.css">
     <!-- endinject -->
     <!-- endbuild -->
 </head>
@@ -43,41 +43,42 @@
 <script src="app/core/core.module.js"></script>
 <script src="app/app.config.js"></script>
 <script src="app/app.constants.js"></script>
-<script src="app/core/core-search.filter.js"></script>
+<script src="app/admin/admin.service.js"></script>
+<script src="app/admin/home-admin.controller.js"></script>
+<script src="app/components/image-load.directive.js"></script>
 <script src="app/core/core-entities-http-requests.service.js"></script>
 <script src="app/core/core-helper.service.js"></script>
 <script src="app/core/core-save-form-entity.controller.js"></script>
-<!--<script src="app/components/image-load.directive.js"></script>-->
+<script src="app/core/core-search.filter.js"></script>
 <script src="app/admin/faculties/faculties.component.js"></script>
-<script src="app/admin/specialities/specialities.component.js"></script>
-<script src="app/admin/groups/groups.component.js"></script>
-<script src="app/admin/subjects/subjects.component.js"></script>
-<script src="app/admin/admin.service.js"></script>
-<script src="app/admin/home-admin.controller.js"></script>
 <script src="app/admin/faculties/faculties.controller.js"></script>
 <script src="app/admin/faculties/faculties.service.js"></script>
+<script src="app/admin/groups/groups.component.js"></script>
 <script src="app/admin/groups/groups.controller.js"></script>
 <script src="app/admin/groups/groups.service.js"></script>
+<script src="app/admin/specialities/specialities.component.js"></script>
 <script src="app/admin/specialities/specialities.controller.js"></script>
 <script src="app/admin/specialities/specialities.service.js"></script>
+<script src="app/admin/subjects/subjects.component.js"></script>
 <script src="app/admin/subjects/subjects.controller.js"></script>
 <script src="app/admin/subjects/subjects.service.js"></script>
-<script src="app/components/header/header.controller.js"></script>
 <script src="app/components/header/header.component.js"></script>
-<!--<script src="app/admin/groups/students/students.controller.js"></script>-->
-<!--<script src="app/admin/groups/students/students.service.js"></script>-->
-<!--<script src="app/admin/subjects/schedules/schedules.controller.js"></script>-->
-<!--<script src="app/admin/subjects/schedules/schedules.service.js"></script>-->
-<!--<script src="app/admin/subjects/tests/tests.controller.js"></script>-->
-<!--<script src="app/admin/subjects/tests/tests.service.js"></script>-->
-<!--<script src="app/admin/subjects/tests/questions/questions.controller.js"></script>-->
-<!--<script src="app/admin/subjects/tests/questions/questions.service.js"></script>-->
-<!--<script src="app/admin/subjects/tests/test-details/test-details.controller.js"></script>-->
-<!--<script src="app/admin/subjects/tests/questions/answer/answer.controller.js"></script>-->
-<!--<script src="app/admin/subjects/tests/questions/answer/answers.service.js"></script>-->
+<script src="app/components/header/header.controller.js"></script>
+<script src="app/admin/groups/students/students.controller.js"></script>
+<script src="app/admin/groups/students/students.service.js"></script>
+<script src="app/admin/subjects/schedules/schedules.controller.js"></script>
+<script src="app/admin/subjects/schedules/schedules.service.js"></script>
+<script src="app/admin/subjects/tests/tests.controller.js"></script>
+<script src="app/admin/subjects/tests/tests.service.js"></script>
+<script src="app/admin/subjects/tests/questions/questions.controller.js"></script>
+<script src="app/admin/subjects/tests/questions/questions.service.js"></script>
+<script src="app/admin/subjects/tests/test-details/test-details.controller.js"></script>
+<script src="app/admin/subjects/tests/questions/answer/answer.controller.js"></script>
+<script src="app/admin/subjects/tests/questions/answer/answers.service.js"></script>
 <!-- endinject -->
 
 <!-- inject:templates:js -->
+<script src="../.tmp/templates.js"></script>
 <!-- endinject -->
 
 <!-- endbuild -->
