--- a/src/index.html
+++ b/src/index.html
@@ -33,6 +33,7 @@
 <script src="../bower_components/angular-animate/angular-animate.js"></script>
 <script src="../bower_components/angular-aria/angular-aria.js"></script>
 <script src="../bower_components/angular-material/angular-material.js"></script>
+<script src="../bower_components/angular-mocks/angular-mocks.js"></script>
 <!-- endbower -->
 <!-- endbuild -->
 
@@ -68,13 +69,6 @@
 <script src="app/admin/groups/students/students.service.js"></script>
 <script src="app/admin/subjects/schedules/schedules.controller.js"></script>
 <script src="app/admin/subjects/schedules/schedules.service.js"></script>
-<script src="app/admin/subjects/tests/tests.controller.js"></script>
-<script src="app/admin/subjects/tests/tests.service.js"></script>
-<script src="app/admin/subjects/tests/questions/questions.controller.js"></script>
-<script src="app/admin/subjects/tests/questions/questions.service.js"></script>
-<script src="app/admin/subjects/tests/test-details/test-details.controller.js"></script>
-<script src="app/admin/subjects/tests/questions/answer/answer.controller.js"></script>
-<script src="app/admin/subjects/tests/questions/answer/answers.service.js"></script>
 <!-- endinject -->
 
 <!-- inject:templates:js -->
